# Jetson-RT-Traffic-System

./: .gitignore  README.md  c_cpp_properties.json  config_infer_primary.txt  deeplaunchtext.txt
camera-model/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
camera-model/log/: latest_build
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/ament_index/resource_index/package_run_dependencies/: cpp_pubsub
install/cpp_pubsub/share/cpp_pubsub/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/cpp_pubsub/share/cpp_pubsub/cmake/: cpp_pubsubConfig-version.cmake  cpp_pubsubConfig.cmake
install/cpp_pubsub/share/cpp_pubsub/environment/: ament_prefix_path.dsv  path.dsv
install/detections_img/share/detections_img/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/detections_img/share/detections_img/cmake/: detections_imgConfig-version.cmake  detections_imgConfig.cmake
install/detections_img/share/detections_img/environment/: ament_prefix_path.dsv  path.dsv
install/my_package/lib/my_package/: my_node
install/my_package/share/my_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_package/share/my_package/cmake/: my_packageConfig-version.cmake  my_packageConfig.cmake
install/my_package/share/my_package/environment/: ament_prefix_path.dsv  path.dsv
install/my_pkg/share/my_pkg/: local_setup.sh  package.sh  package.xml
install/traffic_detect/lib/traffic_detect/: traffic_detect_node
install/traffic_detect/share/traffic_detect/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/traffic_detect/share/traffic_detect/cmake/: traffic_detectConfig-version.cmake  traffic_detectConfig.cmake
install/traffic_detect/share/traffic_detect/environment/: ament_prefix_path.dsv  path.dsv
install/videopub/lib/videopub/: video_publisher
install/videopub/share/videopub/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: cam.py  deepstream_bag.py  deepstream_cam.py  deepstream_track_vid.py  deepstream_vid.py  record.py  vid.py
log/: latest_build  latest_test
models/Primary_Detector/: resnet18_trafficcamnet_pruned.onnx_b1_gpu0_fp16.engine  resnet18_trafficcamnet_pruned.onnx_b1_gpu0_int8.engine  resnet18_trafficcamnet_pruned.onnx_b30_gpu0_int8.engine
src/box_velocity/: CMakeLists.txt  package.xml
src/box_velocity/src/: main.cpp
src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/deepstream_detect/: package.xml  setup.cfg  setup.py
src/deepstream_detect/deepstream_detect/: deepstream_detect_node.py  dstest2_pgie_config.txt  dstest2_sgie1_config.txt  dstest2_sgie2_config.txt
src/deepstream_detect/deepstream_detect/common/: platform_info.py
src/deepstream_detect/deepstream_detect/models/lpdetect/: LPDNet_usa_pruned_tao5.onnx_b16_gpu0_int8.engine
src/deepstream_detect/deepstream_detect/nvinfer_custom_lpr_parser/: Makefile  nvinfer_custom_lpr_parser.cpp
src/deepstream_tracker/: CMakeLists.txt  package.xml
src/deepstream_tracker/cfg/: dstest2_tracker_config.txt  pgie_trafficcamnet_config.txt  tracker_iou_config.txt
src/deepstream_tracker/src/: deepstream_tracker_node.cpp
src/detections_img/: CMakeLists.txt
src/detections_img/src/: main.cpp
src/drawing_node/src/: drawing_node.cpp
src/traffic_detect/: CMakeLists.txt  package.xml
src/traffic_detect/install/: local_setup.sh  setup.sh
src/traffic_detect/log/: latest_build
src/traffic_detect/src/: main.cpp
src/video_streamer_cpp/: CMakeLists.txt  package.xml
src/video_streamer_cpp/src/: main.cpp
src/videopub/: package.xml  setup.cfg  setup.py
src/videopub/videopub/: video_publisher.py
usb_cam_cfg/: webcam.yaml
(+23 files in other folders)
